[tool.poetry]
name = "matplotlib-functions"
version = "0.1.0"
description = ""
authors = ["Slmpnv <slmpnvmail@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.8.2"
mpld3 = "^0.5.10"
icecream = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
